@@ -71,6 +71,9 @@
 #    This takes a large number of escape sequences, see the man page
 #    for details on these options.
 #
+#  CONTROLPORT:<port spec>
+#    Allow the control port to be specified in the config file.
+#
 # Note that the same device can be listed multiple times under different
 # ports, this allows the same serial port to have both telnet and raw
 # protocols.
@@ -87,6 +90,9 @@ BANNER:banner3:this is ser2net TCP port \p device \d  serial parms \s\r\n
 
 TRACEFILE:tw1:/tmp/tw-\p-\Y-\M-\D-\H:\i:\s.\U
 TRACEFILE:tr1:/tmp/tr-\p-\Y-\M-\D-\H:\i:\s.\U
+
+# Don't do this by default
+#CONTROLPORT:2000
 
 2001:raw:600:/dev/ttyS0:9600 NONE 1STOPBIT 8DATABITS XONXOFF LOCAL -RTSCTS
 #2002:raw:600:/dev/ttyS1:9600 NONE 1STOPBIT 8DATABITS XONXOFF LOCAL -RTSCTS
